--- a/openrtb-core/pom.xml
+++ b/openrtb-core/pom.xml
@@ -28,6 +28,11 @@
       <version>${protobufVersion}</version>
     </dependency>
     <dependency>
+      <groupId>com.google.openrtb</groupId>
+      <artifactId>openrtb-core</artifactId>
+      <version>${google.openrtb-core.version}</version>
+    </dependency>
+    <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
       <version>${guavaVersion}</version>
