--- a/openrtb-core/pom.xml
+++ b/openrtb-core/pom.xml
@@ -31,6 +31,7 @@
       <groupId>com.google.openrtb</groupId>
       <artifactId>openrtb-core</artifactId>
       <version>${google.openrtb-core.version}</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.google.guava</groupId>
